fix sidebar overflow on ios (still don`t understand...)

--- a/src/layout.css
+++ b/src/layout.css
@@ -238,6 +238,7 @@ scroll-outer.bottom {
 scroll-outer.bottom > * {
 	direction: initial;
 	writing-mode: initial;
+	width: 100%; /* why? */
 }
 
 .image-box {
